# Faceit-client-mode

./: .gitattributes  .gitignore  README.md  SECURITY.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.github/workflows/: ci.yml  release-beta.yml  release-stable.yml
compatibility/: README.md  config.json  manifest.example.json  manifest.production.json  manifest.signed.json
docs/: ARCHITECTURE.md  PRIVACY.md  RELEASE.md  SECURITY.md  TESTING.md  THIRD_PARTY_NOTICES.md
extension/: NOTICE.txt  manifest.json  package.json  tsconfig.json  vitest.config.ts
extension/fixtures/: active-room.html  finished-room.html  history.html  logged-out.html  profile-visual-harness.html  profile-visual-harness.ts  profile.html  selector-drift.html  server-ready.html  settings-harness.html  settings-harness.ts  veto.html  visual-harness.html  visual-harness.ts
extension/scripts/: build-fixture.mjs  build.mjs
extension/src/: automations.ts  bridge-client.ts  compatibility.ts  content.ts  controller-restart.ts  controller.ts  debug-log.ts  dom.ts  globals.d.ts  i18n.ts  inline-match.ts  interface-visibility.ts  main-bridge.ts  map-winrate-chart.ts  match-accept-preview.ts  match-signal-hook.ts  native-tier-surfaces.ts  normalize.ts  positions.ts  profile-stats-banner.ts  profile-stats-model.ts  protocol.ts  recent-map-stats.ts  routes.ts  settings-panel.ts  settings.ts  shell-settings-bridge.ts  snapshots.ts  styles.ts  ui.ts
extension/tests/: automations.test.ts  bridge-client.test.ts  bridge.test.ts  compatibility.test.ts  controller-lifecycle.test.ts  controller-restart.test.ts  debug-log.test.ts  fixture.ts  fixtures.test.ts  inline-match.test.ts  interface-visibility.test.ts  map-winrate-chart.test.ts  match-accept-preview.test.ts  match-signal.test.ts  native-tier-surfaces.test.ts  normalize.test.ts  positions.test.ts  profile-stats-banner.test.ts  setup.ts  (+8 more)
scripts/: generate-compatibility-key.mjs  generate-updater-key.mjs  security-audit.mjs  sign-compatibility.mjs  verify-release.mjs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: debug_log.rs  diagnostics.rs  lib.rs  main.rs  policy.rs  shell_settings.rs  updater.rs
(+4 files in other folders)
