[package]
name = "eloscope"
version = "0.1.0-beta.1"
description = "A lightweight, independent FACEIT enhancement client"
authors = ["EloScope contributors"]
edition = "2021"
rust-version = "1.88"
license = "UNLICENSED"
repository = "https://github.com/lsby1808/Faceit-client-mode"

[lib]
name = "eloscope_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "eloscope"
path = "src/main.rs"

[build-dependencies]
ico = "0.5.0"
tauri-build = { version = "2.5.2", features = [] }

[dependencies]
getrandom = "0.4.3"
open = "5.3.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tauri = { version = "2.11.5", features = [] }
tauri-plugin-dialog = "2.7.2"
tauri-plugin-updater = "2.10.1"
tokio = { version = "1.49.0", features = ["time"] }
url = "2.5.8"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
